Fix welcome screen on small resolutions

--- a/pointless/viewer/viewer.css
+++ b/pointless/viewer/viewer.css
@@ -19,9 +19,7 @@ a {
 
 header > h1 {
   display: inline-block;
-  margin-bottom: 0;
-  margin-right: 0.5rem;
-
+  margin: 0 0.5rem 0 0;
 }
 
 header span {
@@ -34,10 +32,19 @@ header span {
 
 #welcomeScreen {
   display: none;
+  max-height: 100%;
+  min-width: 20rem;
+  overflow: auto;
+  padding: 1rem;
+  box-sizing: border-box;
 }
 
 #welcomeScreen > div {
   margin-bottom: 4rem;
+}
+
+#welcomeScreen > div:last-child {
+  margin-bottom: 1rem;
 }
 
 #welcomeScreen table {
